🌙 Dark Mode Resolved

--- a/src/app/right-tab/right-tab.component.scss
+++ b/src/app/right-tab/right-tab.component.scss
@@ -70,6 +70,7 @@
     position: relative;
     left: 10%;
     top: 10%;
+    z-index: 1;
 }
 .nightModeButton:hover {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
